[package]
name = "fnrs"
version = "0.1.7"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2018"
description = "A simple crate with some useful functions i like."
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/codybloemhard/fnrs"
keywords = ["functional"]
categories = ["functional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
